--- a/index.css
+++ b/index.css
@@ -89,7 +89,7 @@
 }
 
 .group-reviews {
-    background: url(./image-nike.png) center;
+    background: url(./images/image-nike.png) center;
     background-size: cover;
     background-repeat: no-repeat;
     padding-top: 94px;
@@ -164,7 +164,7 @@
 }
 
 #two-back {
-    background: url(./background-image.png) no-repeat center / cover;
+    background: url(./images/background-image.png) no-repeat center / cover;
 }
 
 .two-sect {
@@ -221,7 +221,7 @@ line-height: 64px;
 
 
 #reviews {
-    background-image: url(./flowers.png), url(./background-image.png);
+    background-image: url(./images/flowers.png), url(./images/background-image.png);
     background-position:  left bottom, center ;
     background-size: 340px, cover ;
     background-repeat: no-repeat;
@@ -318,3 +318,109 @@ line-height: 64px;
     font-size: 12px;
     font-weight: 400;
 }
+
+.form-nike {
+    background: url(./images/background-palm.png);
+}
+
+.order1 {
+    color: rgb(255, 255, 255);
+font-family: "Playfair Display";
+font-size: 48px;
+font-weight: 400;
+line-height: 64px;
+background-size: cover;
+display: flex;
+justify-content: center;
+padding-top: 21px;
+}
+
+.write-email {
+ display: flex;
+    border-radius: 50px;
+align-items: center;
+padding-left: 25px;
+background: rgb(255, 255, 255);
+
+width: 690px;
+height: 60px;
+color: rgb(149, 149, 149);
+font-family: "Roboto";
+font-size: 28px;
+font-weight: 400;
+line-height: 33px;
+margin-top: 33px;
+margin-bottom: 19px;
+}
+
+.personal-info-frame {
+    display: flex;
+   
+  flex-direction: column;
+  align-items: center;
+} 
+.write-country{
+    display: flex;
+    border-radius: 50px;
+align-items: center;
+padding-left: 25px;
+background: rgb(255, 255, 255);
+
+width: 580px;
+height: 50px;
+color: rgb(149, 149, 149);
+font-family: "Roboto";
+font-size: 24px;
+font-weight: 400;
+line-height: 28px;
+margin-bottom: 19px;
+}
+.write-city {
+    display: flex;
+    border-radius: 50px;
+align-items: center;
+padding-left: 25px;
+background: rgb(255, 255, 255);
+
+width: 580px;
+height: 50px;
+color: rgb(149, 149, 149);
+font-family: "Roboto";
+
+font-size: 24px;
+font-weight: 400;
+line-height: 28px;
+margin-bottom: 19px;
+
+}
+.write-address {
+    display: flex;
+    border-radius: 50px;
+align-items: center;
+padding-left: 25px;
+background: rgb(255, 255, 255);
+
+width: 580px;
+height: 50px;
+color: rgb(149, 149, 149);
+font-family: "Roboto";
+
+font-size: 24px;
+font-weight: 400;
+line-height: 28px;
+
+margin-bottom: 19px;
+}
+
+.group-button {
+    border-radius: 10px;
+    background: rgb(142, 50, 198);
+    font-family: "Roboto";
+    display: flex;
+    padding: 20px 60px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28px;
+    color: white;
+    margin-bottom: 37px;
+} 
