--- a/index.css
+++ b/index.css
@@ -145,6 +145,7 @@
     font-size: 24px;
     font-weight: 400;
     line-height: 28px;
+    cursor: pointer;
 }
 
 .on-this-site-container {
@@ -425,6 +426,7 @@ margin-bottom: 19px;
     line-height: 28px;
     color: white;
     margin-bottom: 37px;
+    cursor: pointer;
 } 
 
 .c-r-all-rights-reserved-frame {
